--- a/安全学习笔记/【4】内网穿透工具.md
+++ b/安全学习笔记/【4】内网穿透工具.md
@@ -1,4 +1,4 @@
-# 内网穿透 
+# 内网穿透
 
 ## frp
 
@@ -101,3 +101,19 @@ chisel server -p 5556  --reverse  --socks5
 ## reGeorg+Proxifer
 
 待补充·····
+
+## SSH 隧道
+
+ssh 隧道分为本地转发和远端转发
+
+本地端口转发
+
+ssh -L :5000 127.0.0.1:50111  clj@10.10.10.1
+
+将10.10.10.1上的5000端口转发到本地的50111端口
+
+远程端口转发
+
+`ssh -R [bind_addr:]remote1_port:host:port remote1`
+
+[https://www.cnblogs.com/f-ck-need-u/p/10482832.html](https://www.cnblogs.com/f-ck-need-u/p/10482832.html)
