--- a/安全学习笔记/【17】邮件钓鱼.md
+++ b/安全学习笔记/【17】邮件钓鱼.md
@@ -186,7 +186,7 @@ exit
 
 找到 ICON_LOCATION![1723288827076](image/【17】邮件钓鱼/1723288827076.png)
 
-修改为 .\\\__monk\\__MONK\Bagel.pdf 
+修改为 .\\\__monk\\__MONK\Bagel.pdf
 
 ![1723289185697](image/【17】邮件钓鱼/1723289185697.png)
 
@@ -202,3 +202,7 @@ exit
 #### 通过下载的方式执行真正的payload
 
 主要的做法就是lnk文件打开的时候调用的是cmd或powershell 去远程下载payload执行并且远程下载真正的pdf并打开，还没实际测试，后续补充
+
+#### 隐藏参数 
+
+尝试010editor 修改参数段的长度达到让参数不显示，没成功
